force-app/main/default/objects/Weather_Log__c/Weather_Log__c.object-meta.xml
<CustomObject>
    <description>Logs daily weather data for the farm.</description>
    <label>Weather Log</label>
    <nameField>
        <displayFormat>WL-{0000}</displayFormat>
        <label>Weather Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>