force-app/main/default/objects/Weather_Log__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date of the weather record.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>