force-app/main/default/objects/Weather_Log__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <description>Percentage humidity captured.</description>
    <label>Humidity %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>