force-app/main/default/objects/Weather_Log__c/fields/Rainfall_mm__c.field-meta.xml
<CustomField>
    <fullName>Rainfall_mm__c</fullName>
    <description>Rainfall amount in millimeters.</description>
    <label>Rainfall (mm)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>