force-app/main/default/objects/Weather_Log__c/fields/Temperature_Min_C__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Min_C__c</fullName>
    <description>Minimum temperature in Celsius.</description>
    <label>Temp (Min) °C</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>